<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="versionCode">33</string>
    <string name="versionName">1.24</string>
    <string name="app_name">Doc Portal</string>
    <string name="ok">Ok</string>
    <string name="snackbar_download">DOWNLOAD</string>
    <string name="login">Login</string>
    <string name="signIn">Sign In</string>
    <string name="join_doc_portal">Activation</string>
    <string name="login_help_txt">We\'ll help you login in a few easy steps</string>
    <string name="next">Next</string>
    <string name="registration">Activation</string>
    <string name="ftl_registration">Follow the simple steps over the next few screens to get going.</string>
    <string name="whats_your_email_id">Please enter your email address</string>
    <string name="email">Email</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="pin_verification">PIN Verification</string>
    <string name="ftl_pin_verification_text">We have sent a PIN to your mobile phone.</string>
    <string name="login_pin_verification_text">We have sent a PIN to the requested device. Please enter this below.</string>
    <string name="enter_pin_number">Enter PIN Number</string>
    <string name="pin_number">PIN Number</string>
    <string name="enter_your_pin_number">Please enter PIN</string>
    <string name="resend_pin_text">Not received PIN code?</string>
    <string name="resend_pin_btn_text">Resend PIN</string>
    <string name="user_name">Username</string>
    <string name="welcome_to_capital">Welcome to Capital</string>
    <string name="choose_user_name">Choose a Username</string>
    <string name="enter_user_name">Enter the username</string>
    <string name="password">Password</string>
    <string name="choose_password">Choose a Password</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="shr_button_next">Sign In</string>
    <string name="not_logged_in_before">Not Activated Your Account?</string>
    <string name="almost_done">Almost Done!</string>
    <string name="set_terms_acceptance_txt">By clicking Let\'s Start, You are agreeing to our Terms and Privacy Policy</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="mobile">Mobile number</string>
    <string name="err_msg_email">Please enter your email address</string>
    <string name="err_msg_mobile">Please enter valid mobile number</string>
    <string name="pin_verification_dialog_msg">As an additional security step you will shortly receive a PIN to your mobile phone.</string>
    <string name="send_pin">Send PIN</string>
    <string name="cancel">Cancel</string>
    <string name="send_again_pin">SEND PIN AGAIN</string>
    <string name="err_msg_user_name">Please enter a username</string>
    <string name="welcome">Welcome</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_hint_username">Username</string>
    <string name="ftl_text">Activate your account?</string>
    <string name="send_pin_code_to">Send PIN code to?</string>
    <string name="personal_email">Personal Email</string>
    <string name="personal_number">Personal Number</string>
    <string name="touch_id_title">DOC PORTAL</string>
    <string name="touch_id_head">Enable Device Authentication</string>
    <string name="enable_touch">ENABLE</string>
    <string name="skip">Skip</string>
    <string name="touch_id_ques">Would you like to use the device unlock method to access DOC PORTAL</string>
    <string name="touch_id_body">You can login using your device authentication (pattern, touch, passcode ID). Please click below to enable</string>
    <string name="login_verification_text">As an additional security step you will shortly receive a PIN to your registered device.</string>
    <string name="enable_notification">Notification for "DOC PORTAL"</string>
    <string name="enable_notification_button">Proceed</string>
    <string name="alert_title">\"DOC PORTAL\" Would like to Send You Notifcations</string>
    <string name="alert_msg">Notifications may include alerts, sounds and icon badges. These can be configured in the settings.</string>
    <string name="cancel_alert">Dont Allow</string>
    <string name="allow_alert">Allow</string>
    <string name="resend_pin_msg">The PIN you have entered is Incorrect.</string>
    <string name="resend_title">Resend PIN</string>
    <string name="alert">Alert</string>
    <string name="your_message_here">Your message here</string>
    <string name="err_msg_password">Password must be at least 8 characters and contain one uppercase letter and one number</string>
    <string name="err_msg_confirm_password">Please enter a password</string>
    <string name="err_msg_pin_number">Please enter PIN</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="resent_title" />
    <string name="resent_pin_msg">Pin Resent Succesfully !</string>
    <string name="ftl_username_text">This is the username you will login with.</string>
    <string name="ftl_password_text">Please enter a password. It must be at least 8 characters and contain one uppercase letter and one number</string>
    <string name="err_msg_user_name_min_length">The username should be a minimum of 5 characters</string>
    <string name="err_msg_user_name_max_length">The username should be a maximum of 45 characters</string>
    <string name="err_msg_password_min_length">Password should be minimum of 8 characters</string>
    <string name="err_msg_password_max_length">Password should be maximum of 15 characters</string>
    <string name="err_msg_confirm_password_match">Your passwords don\'t match.</string>
    <string name="ftl_username_text1">Please complete the following simple steps to login to your account for the first time. Once inside you will quickly discover the many exciting features My Wealth Cloud has to offer.</string>
    <string name="back_alert_text">Are you sure you want to cancel activation? Any unsaved changes will be lost.</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="i_agree">I Agree</string>
    <string name="sign_out">Signout</string>
    <string name="help_guide_alert">Alert!</string>
    <string name="help_guide_txt">To help get you started discovering the exciting features please click to view our User Guide.You can always revisit this section from the settings menu.</string>
    <string name="got_it">Got it</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="name">Name</string>
    <string name="my_folder">My Folder</string>
    <string name="shared">Shared</string>
    <string name="shared_files">Shared Files</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="share">SHARE</string>
    <string name="cancel_menu">CANCEL</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_type">Sort by type</string>
    <string name="sort_by_size">Sort by size</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_more">more</string>
    <string name="clear_selection">Clear selection</string>
    <string name="share_item">Share</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="available_offline">Available offline</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_move">Move</string>
    <string name="File_Name">File Name</string>
    <string name="Name">Name</string>
    <string name="Version">Version</string>
    <string name="Type">Type</string>
    <string name="Size">Size</string>
    <string name="Uploaded_date">Uploaded Date</string>
    <string name="Author">Author</string>
    <string name="Creation_date">Creation Date</string>
    <string name="Search_tags">Search Tags</string>
    <string name="Certificates">Certificates</string>
    <string name="Createdby">Johnsmith </string>
    <string name="date">on 12 May</string>
    <string name="lorem">The push notifications are enabled for The Doc Portal app. You can change the status from the settings page later.</string>
    <string name="identity">Identity Validation</string>
    <string name="upload">Upload</string>
    <string name="document">Document</string>
    <string name="new_folder">New Folder</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo library</string>
    <string name="browse">Browse</string>
    <string name="pick_image">Select Image</string>
    <string name="pick_video">Select Video</string>
    <string name="pick_documents">Select File</string>
    <string name="scan_document">Scan Document</string>
    <string name="video">Video</string>
    <string name="user_name_txt">User Name</string>
    <string name="user_offline_files_txt">Offline Files</string>
    <string name="push_notification_txt">Push Notifications</string>
    <string name="finger_print_txt">Device Authentication</string>
    <string name="help_txt">Help</string>
    <string name="terms_privacy_txt">Terms &amp; Privacy Policy</string>
    <string name="adviser_callback_txt">Request Adviser Call Back</string>
    <string name="logout_txt">Logout</string>
    <string name="version_txt">Version No:</string>
    <string name="username_txt">Username</string>
    <string name="title_txt">Title</string>
    <string name="first_name_txt">First Name</string>
    <string name="surname_txt">Surname</string>
    <string name="email_txt">Email Address</string>
    <string name="workPhone_txt">Work Phone</string>
    <string name="extension_txt">Extension</string>
    <string name="mobilePhone_txt">Mobile Phone</string>
    <string name="address_txt1">Address Line 1</string>
    <string name="address_txt2">Address Line 2</string>
    <string name="town_txt">Town</string>
    <string name="postCode_txt">Postcode</string>
    <string name="country_txt">Country</string>
    <string name="stop_sharing_text">You are about to stop sharing the selected document(s)</string>
    <string name="external_sharing_text">You are about to share externally from this app. Are you sure?</string>
    <string name="newname_txt">Please enter a new name.</string>
    <string name="share_external_txt">This file will open in the selected app</string>
    <string name="check_network_txt">Please check that you are connected to the internet</string>
    <string name="upload_txt">Your file(s) are being uploaded and will be available in your account in a few minutes</string>
    <string name="internal_share_txt">Please choose a location to share into</string>
    <string name="upload_failed_txt">One or more files not uploaded. Tap here to see details</string>
    <string name="internet_failure_txt">Please check that you are connected to the internet. Click here to view files you have made available offline.</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_title">Default Channel</string>
    <string name="upload_beginning_message">Please remain on this screen until your files have uploaded</string>
    <string name="loading_wait_txt">Loading Please wait...</string>
    <string name="userName_txt">Username *</string>
    <string name="userName_hint">Username</string>
    <string name="usertitle_txt">Title</string>
    <string name="usertitle_hint">Title</string>
    <string name="firstName_txt">First Name *</string>
    <string name="firstName_hint">First Name</string>
</resources>