<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_delete"
        android:icon="@mipmap/ic_delete"
        android:title="@string/menu_item_delete"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_move"
        android:icon="@mipmap/ic_move"
        android:visible="false"
        android:title="@string/menu_item_move"
        app:showAsAction="always"/>

    <item android:id="@+id/action_share"
        android:icon="@mipmap/ic_share"
        android:visible="false"
        android:title="@string/menu_item_share"
        app:showAsAction="always"/>

    <item android:id="@+id/action_more"
        android:icon="@mipmap/ic_more"
        android:title="@string/menu_item_more"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/menu_item_search"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add"
        android:icon="@mipmap/ic_add"
        android:title="@string/menu_item_add"
        app:showAsAction="always"/>
</menu>