<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_folder"
        android:icon="@mipmap/ic_myfolder"
        android:title="@string/my_folder" />

    <item
        android:id="@+id/navigation_shared"
        android:icon="@mipmap/ic_shared_files"
        android:title="@string/shared_files" />

    <!--android:actionLayout="@layout/badge_count_item"-->

    <item
        android:id="@+id/navigation_settings"
        android:icon="@mipmap/ic_settings"
        android:title="@string/settings" />

   <!-- <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/ic_new_more"
        android:title="@string/more" />-->
</menu>