<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/r1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">
            <TextView
                android:id="@+id/notes_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Certificates"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/notes_creratedby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Createdby"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textSize="15sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">
            <TextView
                android:id="@+id/notes_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/notes_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/relativeLayout"
            android:layout_toRightOf="@+id/relativeLayout"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/r1"/>

</LinearLayout>