<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/Text"
        android:text="@string/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <requestFocus />
    </TextView>


    <TextView
        android:id="@+id/Text1"
        android:text="@string/alert_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black_semi_transparent"
        android:layout_marginTop="10dp">

        <requestFocus />
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/save"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/cancel_alert"
            android:background="@drawable/enable_touch"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/allow_alert"
            android:background="@drawable/enable_touch"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</LinearLayout>