<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/popup_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:alpha="0.87"
                android:visibility="visible" />

            <TextView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/video"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:alpha="0.87"
                android:visibility="visible" />

            <TextView
                android:id="@+id/browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:drawableRight="@mipmap/ic_more"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/browse"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:alpha="0.87"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:alpha="0.64"/>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:alpha="0.87"
                android:visibility="visible" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>