<?xml version="1.0" encoding="utf-8"?>

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:clickable="true"
    android:focusableInTouchMode="true" >

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="40%">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/logo"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="60%"
        android:layout_below="@+id/frame1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_guide_alert"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:alpha="0.87"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/help_guide_txt"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:alpha="0.64"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <CheckBox
                    android:id="@+id/checkbox_user_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:alpha="0.64"
                    android:gravity="center"
                    android:text="@string/do_not_show_again"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:onClick="itemClicked"/>

                <Button
                    android:id="@+id/got_it_button"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/next"
                    android:text="@string/got_it"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cancel_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:alpha="0.87"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</android.support.percent.PercentRelativeLayout>
